--- a/src/app/main/dynamic-modules/interviews/interview-execution/interview-execution.component.html
+++ b/src/app/main/dynamic-modules/interviews/interview-execution/interview-execution.component.html
@@ -10,11 +10,11 @@
 
 <section class="flex w-full h-full flex-col">
 
-  <ng-container *ngIf="this.executingInterview">
+  <ng-container *ngIf="this.interview">
     <section class="flex flex-col w-full mb-8 justify-center">
       <!--CATEGORIES-->
       <mat-stepper linear #stepper>
-        <mat-step *ngFor="let category of this.executingInterview.categories" [label]="category.displayName"
+        <mat-step *ngFor="let category of this.interview.categories" [label]="category.displayName"
           [editable]="true">
         </mat-step>
       </mat-stepper>
@@ -22,7 +22,7 @@
 
       <!--PAGES-->
       <mat-stepper linear #stepper class="pages flex justify-center">
-        <mat-step *ngFor="let page of this.currentCategory.pages"  [label]="page.displayName"
+        <mat-step *ngFor="let page of this.interview.currentCategoryPages"  [label]="page.displayName"
         [ngClass]="{'no-label': !page.displayName}"
         [editable]="true">
         </mat-step>
@@ -66,16 +66,16 @@
 
     <section class="flex h-[50px] justify-center">
       <section class="navigation flex">
-        <button mat-button class="">
+        <button mat-button class="" (click)="this.onPage(InterviewEvaluationAction.First)">
           <mat-icon>keyboard_double_arrow_left</mat-icon>
         </button>
-        <button mat-button class="">
+        <button mat-button class="" (click)="this.onPage(InterviewEvaluationAction.Previous)">
           <mat-icon>keyboard_arrow_left</mat-icon>
         </button>
-        <button mat-button class="">
+        <button mat-button class="" (click)="this.onPage(InterviewEvaluationAction.Next)">
           <mat-icon>keyboard_arrow_right</mat-icon>
         </button>
-        <button mat-button class="">
+        <button mat-button class="" (click)="this.onPage(InterviewEvaluationAction.Last)">
           <mat-icon>keyboard_double_arrow_right</mat-icon>
         </button>
       </section>
